@@ -43,9 +43,9 @@ at90s8535).
 
 Instruction set avr25 is for the classic AVR core with up to 8K program memory
 space plus the MOVW instruction (MCU types: attiny13, attiny13a, attiny2313,
-attiny24, attiny44, attiny84, attiny25, attiny45, attiny85, attiny261,
-attiny461, attiny861, attiny87, attiny43u, attiny48, attiny88, at86rf401,
-ata6289).
+attiny2313a, attiny24, attiny24a, attiny4313, attiny44, attiny44a, attiny84,
+attiny25, attiny45, attiny85, attiny261, attiny261a, attiny461, attiny861,
+attiny861a, attiny87, attiny43u, attiny48, attiny88, at86rf401, ata6289).
 
 Instruction set avr3 is for the classic AVR core with up to 128K program
 memory space (MCU types: at43usb355, at76c711).
@@ -67,10 +67,11 @@ memory space (MCU types: atmega16, atmega161, atmega162, atmega163, atmega164p,
 atmega165, atmega165p, atmega168, atmega168p, atmega169, atmega169p, atmega16c1,
 atmega32, atmega323, atmega324p, atmega325, atmega325p, atmega3250, atmega3250p,
 atmega328p, atmega329, atmega329p, atmega3290, atmega3290p, atmega406, atmega64,
-atmega640, atmega644, atmega644p, atmega645, atmega6450, atmega649, atmega6490,
-atmega16hva, atmega16hvb, atmega32hvb, at90can32, at90can64, at90pwm216,
-at90pwm316, atmega32c1, atmega64c1, atmega16m1, atmega32m1, atmega64m1,
-atmega16u4, atmega32u4, atmega32u6, at90usb646, at90usb647, at94k, at90scr100).
+atmega640, atmega644, atmega644p, atmega644pa, atmega645, atmega6450, atmega649,
+atmega6490, atmega16hva, atmega16hvb, atmega32hvb, at90can32, at90can64,
+at90pwm216, at90pwm316, atmega32c1, atmega64c1, atmega16m1, atmega32m1,
+atmega64m1, atmega16u4, atmega32u4, atmega32u6, at90usb646, at90usb647, at94k,
+at90scr100).
 
 Instruction set avr51 is for the enhanced AVR core with exactly 128K program
 memory space (MCU types: atmega128, atmega1280, atmega1281, atmega1284p,
